# python-rig-client

./: .gitignore  CHANGELOG.md  LICENSE  README.md  freq_format_test.py  py-webview.py  pyproject.toml  radio.py  requirements.txt  rigClient.html  rigclient.py  rigcmd
.github/workflows/: native-build-briefcase.yml  native-builds.yml
rigclient/: connection_status.py  rigclient.py
todo/: github-action-native-builds.txt
