[build-system]
requires = ["briefcase==0.3.25", "setuptools", "wheel"]
build-backend = "setuptools.build_meta"

[tool.briefcase]
# Global configuration
app_name = "rigclient"
formal_name = "Rig Client"
version = "1.0.0"
description = "A Python app for rig control packaged with BeeWare Briefcase."
author = "Rich Freedman, N2EHL"
author_email = "n2ehl@arrl.net"
url = "https://github.com/rfreedman/rigclient"
entry_point = "rigclient:main"
platforms = ["macOS", "Windows", "Linux"]
license = "MIT"

# Required for Briefcase 0.3.x
bundle = "radio.n2ehl.rigclient"
project_name = "rigclient"

[tool.briefcase.app.rigclient]
module = "rigclient"
sources = ["rigclient"]          # <-- Added: folder containing your Python code
requires = ["QtPy==2.4.3, pywebview==6.0"]  # Add your Python dependencies here
